--- a/package.json
+++ b/package.json
@@ -15,12 +15,11 @@
   "dependencies": {
     "@urql/vue": "^1.1.2",
     "graphql": "^16.8.0",
-    "nuxt": "^3.7.1"
+    "nuxt": "3.6.5"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "^5.0.0",
     "@graphql-codegen/client-preset": "^4.1.0",
-    "@nuxt/devtools": "^0.8.3",
     "@nuxtjs/eslint-config-typescript": "^12.1.0",
     "@types/node": "^20.6.0",
     "eslint": "^8.49.0",
